<resources>
    <string name="app_name">My Diary App</string>
    <string name="title_activity_login">登录</string>
    <string name="prompt_email">电子邮件地址</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">欢迎，%1$s！</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_about">关于</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_basic">基本设置</string>
    <string name="yourname">您的名字</string>
    <string name="acceptlicense_settings">同意用户协议</string>
    <string name="title_activity_license">许可证</string>
    <string name="welcome_title">欢迎使用 My Diary App</string>
    <string name="startuse">开始使用</string>
    <string name="license_title">用户协议</string>
    <string name="license_agree_text">我已阅读并同意以上许可协议</string>
    <string name="button_cancel">取消</string>
    <string name="button_continue">继续</string>
    <string name="logout">退出登录</string>
    <string name="logout_this_account">退出登录当前账户</string>
    <string name="reset_pref">重置设置</string>
    <string name="please_notice_this_will_reset_all_prefs">请注意：这将重置所有设置为默认值！</string>
    <string name="account">账户</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="view_privacy_policy">查看隐私政策</string>
    <string name="privacy_and_security">隐私与安全</string>
    <string name="app_logo">App logo</string>
    <string name="my_diary">My Diary</string>
    <string name="are_you_a_human">你是人类吗？</string>
    <string name="confirm_resetpref_title">确定重置偏好设置？？</string>
    <string name="confirm_resetpref_text">重置后无法恢复！！</string>
    <string name="confirm_resetpref_checkbox">我点错了</string>
    <string name="do_not_do_this">不要这样做</string>
    <string name="about">关于</string>
    <string name="about_this_app">关于</string>
    <string name="about_this_app_open_activity">打开关于页面</string>
    <string name="settings_open_source_license">开放源代码许可</string>
    <string name="settings_open_source_license_open_activity">查看开放源代码许可信息</string>
    <string name="about_this_app_product_mainpage">项目主页</string>
    <string name="about_this_app_open_mainpage">打开项目主页</string>
    <string name="title_activity_ui_confirm_reset_pref">确认操作</string>
    <string name="title_activity_about_osl">开放源代码许可</string>
    <string name="title_activity_diary_list">日记列表</string>
    <string name="title_activity_diary_editor">编辑日记</string>
    <string name="title_activity_entrance">My Diary App</string>
    <string name="settings_permission_explain">权限说明</string>
    <string name="settings_permission_explain_open_activity">说明应用程序如何使用权限。</string>
    <string name="title_activity_permission_explain">权限说明</string>
    <string name="click_to_open_project_homepage">点击打开项目主页</string>
    <string name="project_homepage">https://github.com/shc0743/MyDiaryApp-Android</string>
    <string name="application">应用程序</string>
    <string name="telemetry_enabled">启用遥测</string>
    <string name="about_telemetry_settings">上传一些使用情况数据和可选诊断数据，以帮助我们改善应用程序</string>
    <string name="upload_crash_reports">允许上传崩溃报告</string>
    <string name="upload_crash_reports_settings">上传应用程序的崩溃报告，以帮助我们改善应用程序</string>
    <string name="auto_update">自动更新</string>
    <string name="open_auto_update_settings">打开自动更新设置</string>
    <string name="feedback">反馈</string>
    <string name="feedback_app_problems">反馈应用程序的相关问题</string>
    <string name="senadina">希娜狄雅</string>
    <string name="input">输入</string>
    <string name="output">输出</string>
    <string name="debug">调试</string>
    <string name="open_aescipher_debug">打开 AESCipherActivity</string>
    <string name="encrypt">加密</string>
    <string name="decrypt">解密</string>
    <string name="please_input_password">请输入密码</string>
    <string name="senadina_encrypt_key_encrypted">HhOoEpHLEV5Ql+MpwcU+y4n3l9H+bAiSmIVxQqFEYfo=</string>
</resources>