<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_basic">

        <EditTextPreference
            app:key="yourname"
            app:title="@string/yourname"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="decline"
            app:entries="@array/acceptlicense_entries"
            app:entryValues="@array/acceptlicense_values"
            app:key="acceptlicense"
            app:title="@string/acceptlicense_settings"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/privacy_and_security">

        <Preference
            app:key="privacy_policy"
            app:summary="@string/view_privacy_policy"
            app:title="@string/privacy_policy" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/account">

        <Preference
            app:key="logout"
            app:summary="@string/logout_this_account"
            app:title="@string/logout" />

        <Preference
            app:key="delete_account"
            app:summary="@string/please_notice_this_will_reset_all_prefs"
            app:title="@string/reset_pref" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/application">

        <CheckBoxPreference
            app:key="enable_telemetry"
            app:summary="@string/about_telemetry_settings"
            app:title="@string/telemetry_enabled" />

        <CheckBoxPreference
            app:key="upload_crash_reports"
            app:summary="@string/upload_crash_reports_settings"
            app:title="@string/upload_crash_reports" />

        <Preference
            app:key="update_settings"
            app:summary="@string/open_auto_update_settings"
            app:title="@string/auto_update" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about">

        <Preference
            app:key="about_app"
            app:summary="@string/about_this_app_open_activity"
            app:title="@string/about_this_app" />

        <Preference
            app:key="open_source_license"
            app:summary="@string/settings_open_source_license_open_activity"
            app:title="@string/settings_open_source_license" />

        <Preference
            app:key="permission_explain"
            app:summary="@string/settings_permission_explain_open_activity"
            app:title="@string/settings_permission_explain" />

        <Preference
            app:key="product_mainpage"
            app:summary="@string/about_this_app_open_mainpage"
            app:title="@string/about_this_app_product_mainpage" />

        <Preference
            app:key="feedback"
            app:summary="@string/feedback_app_problems"
            app:title="@string/feedback" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/debug">

        <Preference
            app:key="open_aescipher"
            app:summary="@string/open_aescipher_debug"
            app:title="@string/open_aescipher_debug" />

    </PreferenceCategory>

</PreferenceScreen>